added and updated code from testing

--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
 </head>
 
 <body>
+  <div class="container">
 
-  <div class="wrapper">
-    <div class="product-images">
-      <img src="./images/image-product-desktop.jpg" class="desktop-only" alt="">
-      <img src="./images/image-product-mobile.jpg" class="mobile-only" alt="">
-    </div>
-    <div class="product">
-      <p>Perfume</p>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
-        Perfumer-Creator for the House of CHANEL.</p>
-      <div class="product-price">
-        <span>$149.99</span>
-        <span> $169.99</span>
+      <img src="./images/image-product-desktop.jpg"
+        alt="image-product-desktop"
+         width="100%"
+          height="100%" 
+          />
+
+          <img src="./images/image-product-mobile.jpg"
+           alt="image-product-mobile" 
+           width=""
+           height=""
+           hidden
+           />
+
+      <div class="product">
+          <p class="name">perfume</p>
+          <h1 class="product-detail">Gabrielle Essence Eau De Perfum</h1>
+          <p>A floral, solar and voluptuous intrepretation composed by Oliver polge, Perfume-Creator for the House of
+              CHANEL</p>
+
+          <div class="product-price">
+              <span>$149.99</span>
+              <span>$250.00 </span>
+          </div>
+
+          <button class="product-btn">
+              <img src="./images/icon-cart.svg" alt="icon-cart" />
+              Add to cart
+          </button>
       </div>
-      <div class="product-btn">
-        <button> Add to Cart</button>
-      </div>
-    </div>
   </div>
 </body>
 
