--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="container">
 
       <img src="./images/image-product-desktop.jpg"
+      class="desktop-img"
         alt="image-product-desktop"
          width="100%"
           height="100%" 
@@ -25,9 +26,10 @@
 
           <img src="./images/image-product-mobile.jpg"
            alt="image-product-mobile" 
+           class="mobile-img"
            width=""
            height=""
-           hidden
+         
            />
 
       <div class="product">
