updated @ media for a landscape screen and for desktop view

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 <body>
   <div class="container">
 
-      <img src="./images/image-product-desktop.jpg"
+      <img 
+      src="./images/image-product-desktop.jpg"
       class="desktop-img"
         alt="image-product-desktop"
          width="100%"
           height="100%" 
           />
 
-          <img src="./images/image-product-mobile.jpg"
+          <img
+           src="./images/image-product-mobile.jpg"
            alt="image-product-mobile" 
            class="mobile-img"
            width=""
@@ -35,8 +37,12 @@
       <div class="product">
           <p class="name">perfume</p>
           <h1 class="product-detail">Gabrielle Essence Eau De Perfum</h1>
-          <p>A floral, solar and voluptuous intrepretation composed by Oliver polge, Perfume-Creator for the House of
-              CHANEL</p>
+
+          <p>
+            A floral, solar and voluptuous intrepretation
+             composed by Oliver polge, Perfume-Creator for the House of
+              CHANEL
+            </p>
 
           <div class="product-price">
               <span>$149.99</span>
@@ -44,7 +50,9 @@
           </div>
 
           <button class="product-btn">
-              <img src="./images/icon-cart.svg" alt="icon-cart" />
+              <img
+               src="./images/icon-cart.svg" 
+               alt="icon-cart" />
               Add to cart
           </button>
       </div>
